@@ -104,6 +104,12 @@ detectDE
 
 
 
+if [ x"$DE" = x"" ]; then
+    if [ x"$BROWSER" != x"" ]; then
+        DE=generic
+    fi
+fi
+
 case "$DE" in
     kde)
     open_kde "$1"
