@@ -59,6 +59,13 @@ su_generic()
 
 #@xdg-utils-common@
 
+if [ x"$DE" = x"" ]; then
+    XSU=`which xsu 2>/dev/null`
+    if [ $? -eq 0 ] ; then
+        DE=generic
+    fi
+fi
+
 case "$DE" in
     kde)
     su_kde "$@"
